Solaris builds depend on ILLUMOS libc

XMLWordPrintableJSON

    • ALL
    • Server 2.7.1
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In Oracle Solaris, this leads to this error:

      bash-3.2# ./mongodb-sunos5-x86_64-2.6.0-rc2/bin/mongod
      ld.so.1: mongod: fatal: libc.so.1: version 'ILLUMOS_0.1' not found (required by file mongodb-sunos5-x86_64-2.6.0-rc2/bin/mongod)
      ld.so.1: mongod: fatal: libc.so.1: open failed: No such file or directory
      Killed
      bash-3.2#
      

        1. test_timegm.log
          10 kB
        2. timegm.patch
          1 kB

              Assignee:
              Shaun Verch (Inactive)
              Reporter:
              Ernie Hershey (Inactive)
              Votes:
              2 Vote for this issue
              Watchers:
              10 Start watching this issue

                Created:
                Updated:
                Resolved: