SERVER-13446 POC replacing timegm